--- a/css/verse.css
+++ b/css/verse.css
@@ -9,10 +9,6 @@
     text-align: center;
 }
 
-header {
-    text-align: left;
-}
-
 .verse {
     display: inline-block;
     text-align: left;
